flux/apps/authentik/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
  hostnames:
    - authentik.cbc.gewis.nl
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
