flux/apps/authentik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
  annotations:
    external-dns.alpha.kubernetes.io/target: router02.net.gewis.nl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`authentik.cbc.gewis.nl`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: outpost-callback
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      priority: 10000
      services:
        - name: ak-outpost-cbc
          port: 9000
  tls: {}
